Hoisting. Not perfect yet. And ugly.

--- a/header.html
+++ b/header.html
@@ -12,14 +12,14 @@
         <script type="text/javascript" src="jquery.highlight-3.js"></script>
         <script type="text/javascript" src="tree.js"></script>
 		<style>
-			.jqcNode { font-weight: bold; color: green; }
 		</style>
     </head>
     <body>
 <div id="main">
 
+    <div>
     <input type="text" id="search" name="searchword" value="" />
-<ul id="search_list">
+    </div>
 
 <ul id="collapser">
     <li>
