--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>morr.cc | TITLE</title>
+        <title>morr.cc</title>
         <link rel="shortcut icon" href="/assets/favicon.ico">
         <link rel="stylesheet" href="vt220.css">
 
@@ -11,16 +11,14 @@
 		<script type="text/javascript" src="jquery.collapse.js"></script>
         <script type="text/javascript" src="jquery.highlight-3.js"></script>
         <script type="text/javascript" src="tree.js"></script>
-		<style>
-		</style>
     </head>
     <body>
-<div id="main">
+        <div id="main">
 
-    <div>
-    <input type="text" id="search" name="searchword" value="" />
-    </div>
+            <div>
+                <input type="text" id="search" value="">
+            </div>
 
-<ul id="collapser">
-    <li>
-    morr.cc
+            <ul id="thetree">
+                <li>
+                morr.cc
