Search AND zoom function work!

--- a/header.html
+++ b/header.html
@@ -14,9 +14,8 @@
     </head>
     <body>
         <div id="main">
-
             <div>
-                <input type="text" id="search" value="">
+                <input type="text" id="search" name="neverheardof" value="">
             </div>
 
             <ul id="thetree">
