--- a/header.html
+++ b/header.html
@@ -18,6 +18,4 @@
                 <input type="text" id="search" name="neverheardof" value="">
             </div>
 
-            <ul id="thetree">
-                <li>
-                <span class="node">morr.cc</span>
+            <div id="thetree">
