Simplification in progress

--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
     <body>
         <div id="main">
             <div>
-                <input type="text" id="search" name="neverheardof" value="">
+                <input type="text" id="search" name="neverheardof" value=""> <a href="#">x</a>
             </div>
 
             <div id="thetree">
