Name adaptions, remove jquery.collapse.js

--- a/header.html
+++ b/header.html
@@ -3,14 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>morr.cc</title>
-        <link rel="shortcut icon" href="/assets/favicon.ico">
-        <link rel="stylesheet" href="vt220.css">
+        <link rel="stylesheet" href="almightree.css">
 
 		<script type="text/javascript" src="jquery.js"></script>
 		<script type="text/javascript" src="jquery.easing.js"></script>
-		<script type="text/javascript" src="jquery.collapse.js"></script>
         <script type="text/javascript" src="jquery.highlight-3.js"></script>
-        <script type="text/javascript" src="tree.js"></script>
+        <script type="text/javascript" src="almightree.js"></script>
     </head>
     <body>
         <div id="main">
