--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
     <body>
         <div id="main">
             <div>
-                <input type="text" id="search" name="neverheardof" value=""> <a href="#">x</a>
+                <input type="text" id="search" name="neverheardof" value=""> <a href="/">x</a>
             </div>
 
             <div id="thetree">
