--- a/header.html
+++ b/header.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>morr.cc</title>
-        <link rel="stylesheet" href="almightree.css">
+        <link rel="stylesheet" href="/almightree.css">
 
-		<script type="text/javascript" src="jquery.js"></script>
-		<script type="text/javascript" src="jquery.easing.js"></script>
-        <script type="text/javascript" src="jquery.highlight-3.js"></script>
-        <script type="text/javascript" src="almightree.js"></script>
+		<script type="text/javascript" src="/jquery.js"></script>
+		<script type="text/javascript" src="/jquery.easing.js"></script>
+        <script type="text/javascript" src="/jquery.highlight-3.js"></script>
+        <script type="text/javascript" src="/almightree.js"></script>
     </head>
     <body>
         <div id="main">
