--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
     <body>
         <div id="main">
             <div>
-                <input type="text" id="search" name="neverheardof" value=""> <a href="/">x</a>
+                <input type="text" id="search" name="neverheardof" value=""> <a href="/" id="almightree-clear">x</a>
             </div>
 
             <div id="thetree">
