Renamed #thetree to #almightree

--- a/header.html
+++ b/header.html
@@ -15,4 +15,4 @@
                 <input type="text" id="search" name="neverheardof" value=""> <a href="/" id="almightree-clear">x</a>
             </div>
 
-            <div id="thetree">
+            <div id="almightree">
