Renamed #search to #almightree-search

--- a/header.html
+++ b/header.html
@@ -12,5 +12,5 @@
     <body>
         <div id="main">
             <div>
-                <input type="text" id="search" name="neverheardof" value=""> <a href="/" id="almightree-clear">x</a>
+                <input type="text" id="almightree-search" name="neverheardof" value=""> <a href="/" id="almightree-clear">x</a>
             </div>
