Switch to jQuery 1.8.0

--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
         <title>morr.cc</title>
         <link rel="stylesheet" href="/almightree.css">
 
-		<script type="text/javascript" src="/jquery.js"></script>
+		<script type="text/javascript" src="/jquery-1.8.0.min.js"></script>
         <script type="text/javascript" src="/jquery.highlight-3.js"></script>
         <script type="text/javascript" src="/almightree.js"></script>
     </head>
