Halfway done objectification

--- a/demo.html
+++ b/demo.html
@@ -7,14 +7,14 @@
         <script src="jquery.almightree.js"></script>
         <script>
             $(function(){
-                $("#almightree").almightree({search: "#almightree-search"});
+                $("#wat").almightree({search: "#wut"});
             });
         </script>
         <link rel="stylesheet" href="almightree.css">
     </head>
     <body>
-        <input id="almightree-search">
-        <ul id="almightree">
+        <input id="wut">
+        <ul id="wat">
             <li>Headline
                 <ul>
                     <li>A
