Clear element is not needed anymore, just link to "#".

--- a/demo.html
+++ b/demo.html
@@ -7,14 +7,14 @@
         <script src="jquery.almightree.js"></script>
         <script>
             $(function(){
-                $("#wat").almightree({search: "#wut"});
+                $("#tree").almightree({search: "#box"});
             });
         </script>
         <link rel="stylesheet" href="almightree.css">
     </head>
     <body>
-        <input id="wut">
-        <ul id="wat">
+        <input id="box"> <a href="#" id="clear">clear</a>
+        <ul id="tree">
             <li>Headline
                 <ul>
                     <li>A
