More interesting demo content

--- a/demo.html
+++ b/demo.html
@@ -15,43 +15,22 @@
     <body>
         <input id="box"> <a href="#" id="clear">clear</a>
         <ul id="tree">
-            <li>Headline
+            <li>Top-level headline
                 <ul>
-                    <li>A
+                    <li>First-level item
                         <ul>
-                            <li>1
-                            </li>
-                            <li>2
-                            </li>
-                            <li>more content here
+                            <li>Second-level item</li>
+                            <li>Another one</li>
+                        </ul>
+                    </li>
+                    <li>Another first-level item
+                        <ul>
+                            <li>You get the idea</li>
+                            <li>Here's some third-level content:
                                 <ul>
-                                    <li>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                                    </li>
-                                    <li>200
-                                    </li>
-                                    <li>300
-                                    </li>
+                                    <li>Surprise!</li>
+                                    <li>And something relly long: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</li>
                                 </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>B
-                        <ul>
-                            <li>alpha
-                            </li>
-                            <li>beta
-                            </li>
-                            <li>gamma
-                            </li>
-                        </ul>
-                    </li>
-                    <li>C
-                        <ul>
-                            <li>ichi
-                            </li>
-                            <li>ni
-                            </li>
-                            <li>san
                             </li>
                         </ul>
                     </li>
