Third-level content for the example

--- a/demo.html
+++ b/demo.html
@@ -25,7 +25,12 @@
                     </li>
                     <li>Another first-level item
                         <ul>
-                            <li>You get the idea</li>
+                            <li>You get the idea
+                                <ul>
+                                    <li>Surprise!</li>
+                                    <li>And something relly long: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </li>
                             <li>Here's some third-level content:
                                 <ul>
                                     <li>Surprise!</li>
